examples/test/testpolicy2261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2261
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key25: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value42
          key39: value29
      podSelector:
        matchLabels:
          key10: value20
          key47: value10
